fixing form submition

--- a/ui/index.html
+++ b/ui/index.html
@@ -319,7 +319,7 @@
               <div class="text-center">
                 <h3 class="mb-4">Free Consultation</h3>
               </div>
-              <form action="#" class="appointment-form" name="consultation -form"thod="POST" data-netlify="true">
+              <form action="#" class="appointment-form" name="consultation-form" method="POST" data-netlify="true">
                 <div class="row">
                   <div class="col-md-12 col-lg-6 col-xl-4">
                     <div class="form-group">
