--- a/ui/html/about.html
+++ b/ui/html/about.html
@@ -7,6 +7,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <meta name="author" content="Gilbert Elnino" />
+    <meta name="description" content="The weight loss and health motivation aims to provide complete beginners to healthy life with all they need to know to get started with good meal plan, workout strategy and weight loss inspiration and motivation" />
 
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap"
@@ -107,6 +109,9 @@
             <li class="nav-item">
               <a href="./contact.html" class="nav-link">Contact</a>
             </li>
+            <li class="nav-item">
+              <a href="#appointment-section" class="nav-link">Consultation</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -157,7 +162,7 @@
               <p>
                 We help people in their meal plan that helps to lose weight and fight against food addiction, workout strategies, recommend medicine and gives inspiration and motivation to keep going.
               </p>
-              <p>Our mission is to help people to have body shape they want.</p>
+              <p>Our mission is to help people out there to have happy and healthy life.</p>
               <div class="founder d-flex align-items-center mt-5">
                 <div
                   class="img"
@@ -180,7 +185,7 @@
           <div class="col-md-3 d-flex align-items-stretch">
             <div class="consultation w-100 text-center px-4 px-md-5">
               <h3 class="mb-4">W L H M Services</h3>
-              <p>Become what you want to become with our services</p>
+              <p>He who has health has hope; and he who has hope has everything.</p>
               <a href="#appoint-about" class="btn-custom">See Services</a>
             </div>
           </div>
@@ -189,23 +194,23 @@
               <div class="text-center">
                 <h3 class="mb-4">Free Consultation</h3>
               </div>
-              <form action="#" class="appointment-form" id="appoint-about" method="POST" data-netlify="true">
+              <form action="success.html" class="appointment-form" id="appoint-about" method="POST" data-netlify="true" name="appointment-form">
                 <div class="row">
                   <div class="col-md-12 col-lg-6 col-xl-4">
                     <div class="form-group">
                       <input
                         type="text"
                         class="form-control"
-                        placeholder="Your Name" required
+                        placeholder="Your Name" required name="name"
                       />
                     </div>
                   </div>
                   <div class="col-md-12 col-lg-6 col-xl-4">
                     <div class="form-group">
                       <input
-                        type="text"
+                        type="email"
                         class="form-control"
-                        placeholder="Your Email" required
+                        placeholder="Your Email" required name="email"
                       />
                     </div>
                   </div>
@@ -216,10 +221,12 @@
                           <div class="icon">
                             <span class="fa fa-chevron-down"></span>
                           </div>
-                          <select name="" id="" class="form-control services-options" required>
+                          <select name="services[]" id="" class="form-control services-options" required>
                             <option value="">Services</option>
-                            <option value="">Meal Plan</option>
-                            <option value="">Workout Strategies</option>
+                            <option value="Meal Plan">Meal Plan</option>
+                            <option value="Workout strategy">Workout Strategy</option>
+                            <option value="inspiration">Inspiration</option>
+
                           </select>
                         </div>
                       </div>
@@ -234,7 +241,7 @@
                         <input
                           type="text"
                           class="form-control appointment_date"
-                          placeholder="Date" required
+                          placeholder="Date" required name="Date"
                         />
                       </div>
                     </div>
@@ -248,7 +255,7 @@
                         <input
                           type="text"
                           class="form-control appointment_time"
-                          placeholder="Time" required
+                          placeholder="Time" required name="time"
                         />
                       </div>
                     </div>
@@ -277,7 +284,7 @@
       </div>
     </section>
 
-    <!-- <section class="ftco-section testimony-section bg-light">
+    <section class="ftco-section testimony-section bg-light">
       <div class="container">
         <div class="row justify-content-center pb-5 mb-3">
           <div class="col-md-7 heading-section text-center ftco-animate">
@@ -402,7 +409,7 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <h1 class="special">what make us special</h1>
 
@@ -446,12 +453,12 @@
             </h2>
             </div>
             <div class="col-md-5 d-flex align-items-center">
-            <form action="#" class="subscribe-form" method="POST" data-netlify="true">
+            <form action="subscribe-success.html" class="subscribe-form" name="subscribeForm" method="POST" data-netlify="true">
               <div class="form-group d-flex">
               <input
                 type="email"
                 class="form-control"
-                placeholder="Enter email address" required
+                placeholder="Enter email address" required name="email"
               />
               <input
                 type="submit"
