--- a/ui/index.html
+++ b/ui/index.html
@@ -7,6 +7,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <meta name="author" content="Gilbert Elnino" />
+    <meta name="description" content="The weight loss and health motivation aims to provide complete beginners to healthy life with all they need to know to get started with good meal plan, workout strategy and weight loss inspiration and motivation" />
 
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap"
@@ -107,6 +109,9 @@
             </li>
             <li class="nav-item">
               <a href="./html/contact.html" class="nav-link">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a href="#appointment-section" class="nav-link">Consultation</a>
             </li>
           </ul>
         </div>
@@ -287,7 +292,7 @@
               <p>
                 We help people in their meal plan that helps to lose weight and fight against food addiction, workout strategies, recommend medicine and gives inspiration and motivation to keep going.
               </p>
-              <p>Our mission is to help people to have body shape they want.</p>
+              <p>Our mission is to help people out there to have happy and healthy life.</p>
               <div class="founder d-flex align-items-center mt-5">
                 <div
                   class="img"
@@ -310,7 +315,7 @@
           <div class="col-md-3 d-flex align-items-stretch">
             <div class="consultation w-100 text-center px-4 px-md-5">
               <h3 class="mb-4">W L H M Services</h3>
-              <p>Become what you want to become with our services</p>
+              <p>He who has health has hope; and he who has hope has everything.</p>
               <a href="#services" class="btn-custom">See Services</a>
             </div>
           </div>
@@ -319,7 +324,7 @@
               <div class="text-center">
                 <h3 class="mb-4">Free Consultation</h3>
               </div>
-              <form action="#" class="appointment-form" name="consultation-form" method="POST" data-netlify="true">
+              <form action="html/success.html" class="appointment-form" name="consultation-form" method="POST" data-netlify="true">
                 <div class="row">
                   <div class="col-md-12 col-lg-6 col-xl-4">
                     <div class="form-group">
@@ -849,7 +854,7 @@
                   </h2>
                 </div>
                 <div class="col-md-5 d-flex align-items-center">
-                  <form action="#" class="subscribe-form" name="subscribe-form" method="POST" data-netlify="true">
+                  <form action="./html/subscribe-success.html" class="subscribe-form" name="subscribeForm" method="POST" data-netlify="true">
                     <div class="form-group d-flex">
                       <input
                         type="email"
