--- a/ui/html/blog.html
+++ b/ui/html/blog.html
@@ -7,6 +7,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <meta name="author" content="Gilbert Elnino" />
+    <meta name="description" content="The weight loss and health motivation aims to provide complete beginners to healthy life with all they need to know to get started with good meal plan, workout strategy and weight loss inspiration and motivation" />
 
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap"
@@ -487,12 +489,12 @@
             </h2>
             </div>
             <div class="col-md-5 d-flex align-items-center">
-            <form action="#" class="subscribe-form" method="POST" data-netlify="true">
+            <form class="subscribe-form" method="POST" data-netlify="true" action="subscribe-success.html" name="subscribeForm">
               <div class="form-group d-flex">
               <input
                 type="email"
                 class="form-control"
-                placeholder="Enter email address" required
+                placeholder="Enter email address" required name="email"
               />
               <input
                 type="submit"
