--- a/ui/html/about.html
+++ b/ui/html/about.html
@@ -41,7 +41,7 @@
               <span class="mailus">Phone no:</span>
               <a href="tel://250782346378">+250 782346378</a> or
               <span class="mailus">email us:</span>
-              <a href="mailto:support@weightlossandhealth.com" title="weight loss and health motivation">support@wlhm.com</a>
+              <a href="mailto:gilbeltelnino@gmail.com" title="weight loss and health motivation email">gilbeltelnino@gmail.com</a>
             </p>
           </div>
           <div class="col d-flex justify-content-end">
@@ -284,7 +284,7 @@
       </div>
     </section>
 
-    <section class="ftco-section testimony-section bg-light">
+    <!-- <section class="ftco-section testimony-section bg-light">
       <div class="container">
         <div class="row justify-content-center pb-5 mb-3">
           <div class="col-md-7 heading-section text-center ftco-animate">
@@ -409,7 +409,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <h1 class="special">what make us special</h1>
 
