--- a/ui/html/message-sent.html
+++ b/ui/html/message-sent.html
@@ -103,109 +103,109 @@
           </div>
         </div>
       </nav>
-    <p style="text-align: center;color: green;font-size: 1rem; padding: 3rem 0;text-transform: capitalize;">Thank you for subscribe to our weekly tips!</p>
+    <p style="text-align: center;color: green;font-size: 1rem; padding: 3rem 0;text-transform: capitalize;">Message sent successfully!</p>
     <div style="text-align: center;">
       <a href="blog.html" style="padding: 0.5rem; text-transform: uppercase;" class="btn-primary">Read Blog</a>
     </div>
     <footer class="footer">
-      <div class="container">
-        <div class="row">
-        <div class="col-md-12">
-          <div class="bg-secondary w-100 rounded p-4">
+        <div class="container">
           <div class="row">
-            <div class="col-md-7 d-flex align-items-center">
-            <h2
-              class="mb-3 mb-sm-0"
-              style="color:black; font-size: 18px;"
-            >
-              Subcribe for our weekly tips
-            </h2>
-            </div>
-            <div class="col-md-5 d-flex align-items-center">
-            <form action="subscribe-success.html" class="subscribe-form" name="subscribeForm" method="POST" data-netlify="true">
-              <div class="form-group d-flex">
-              <input
-                type="email"
-                class="form-control"
-                placeholder="Enter email address" required name="email"
-              />
-              <input
-                type="submit"
-                value="Subscribe"
-                class="submit px-3"
-              />
+          <div class="col-md-12">
+            <div class="bg-secondary w-100 rounded p-4">
+            <div class="row">
+              <div class="col-md-7 d-flex align-items-center">
+              <h2
+                class="mb-3 mb-sm-0"
+                style="color:black; font-size: 18px;"
+              >
+                Subcribe for our weekly tips
+              </h2>
               </div>
-            </form>
+              <div class="col-md-5 d-flex align-items-center">
+              <form action="subscribe-success.html" class="subscribe-form" name="subscribeForm" method="POST" data-netlify="true">
+                <div class="form-group d-flex">
+                <input
+                  type="email"
+                  class="form-control"
+                  placeholder="Enter email address" required name="email"
+                />
+                <input
+                  type="submit"
+                  value="Subscribe"
+                  class="submit px-3"
+                />
+                </div>
+              </form>
+              </div>
+            </div>
             </div>
           </div>
           </div>
-        </div>
-        </div>
-        <div class="row">
-        <div class="col-md-4 col-lg-5">
           <div class="row">
-          <div class="col-md-12 col-lg-8 mb-md-0 mb-4">
-            <h2 class="footer-heading">
-            <a href="../index.html"><img src="../images/my-logo1.png" alt="logo" class="img-logo"></a>
-            </h2>
-            <p>He who has health has hope; and he who has hope has everything. </p>
-           
+          <div class="col-md-4 col-lg-5">
+            <div class="row">
+            <div class="col-md-12 col-lg-8 mb-md-0 mb-4">
+              <h2 class="footer-heading">
+              <a href="../index.html"><img src="../images/my-logo1.png" alt="logo" class="img-logo"></a>
+              </h2>
+              <p>He who has health has hope; and he who has hope has everything. </p>
+             
+            </div>
+            </div>
+          </div>
+          <div class="col-md-8 col-lg-7">
+            <div class="row">
+            <div class="col-md-3 mb-md-0 mb-4 border-left">
+              <h2 class="footer-heading">Services</h2>
+              <ul class="list-unstyled">
+              <li><a href="#" class="py-1 d-block">Meal Plan</a></li>
+              <li>
+                <a href="#" class="py-1 d-block">Workout Strategy</a>
+              </li>
+              <li><a href="#" class="py-1 d-block">inspirations</a></li>
+              </ul>
+            </div>
+            <div class="col-md-3 mb-md-0 mb-4 border-left">
+              <h2 class="footer-heading">About</h2>
+              <ul class="list-unstyled">
+              <li><a href="blog.html" class="py-1 d-block">Blog</a></li>
+              <li><a href="contact.html" class="py-1 d-block">Contact</a></li>
+              </ul>
+            </div>
+            <div class="col-md-3 mb-md-0 mb-4 border-left">
+              <h2 class="footer-heading">Social</h2>
+              <ul class="list-unstyled">
+              <li><a href="https://web.facebook.com/Weightloss.healthmotivation" class="py-1 d-block">Facebook</a></li>
+              <li><a href="#" class="py-1 d-block">Twitter</a></li>
+              <li><a href="#" class="py-1 d-block">Instagram</a></li>
+              </ul>
+            </div>
+            </div>
+          </div>
+          </div>
+          <div class="row mt-5">
+          <div class="col-md-6 col-lg-8">
+            <p class="copyright">
+            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+            Copyright &copy;
+            <script>
+              document.write(new Date().getFullYear());
+            </script>
+            All rights reserved | This template is made with
+            <i class="fa fa-heart" aria-hidden="true"></i> by
+            <a href="https://colorlib.com" target="_blank">Colorlib.com</a>
+            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+            </p>
+          </div>
+          <div class="col-md-6 col-lg-4 text-md-right">
+            <p class="mb-0 list-unstyled privacy">
+            <a class="mr-md-3" href="#" title="Terms and Condititon">Terms and Conditions</a>
+            <a class="mr-md-3" href="#" title="Privacy Policy">Privacy Policy</a>
+            </p>
           </div>
           </div>
         </div>
-        <div class="col-md-8 col-lg-7">
-          <div class="row">
-          <div class="col-md-3 mb-md-0 mb-4 border-left">
-            <h2 class="footer-heading">Services</h2>
-            <ul class="list-unstyled">
-            <li><a href="#" class="py-1 d-block">Meal Plan</a></li>
-            <li>
-              <a href="#" class="py-1 d-block">Workout Strategy</a>
-            </li>
-            <li><a href="#" class="py-1 d-block">inspirations</a></li>
-            </ul>
-          </div>
-          <div class="col-md-3 mb-md-0 mb-4 border-left">
-            <h2 class="footer-heading">About</h2>
-            <ul class="list-unstyled">
-            <li><a href="blog.html" class="py-1 d-block">Blog</a></li>
-            <li><a href="contact.html" class="py-1 d-block">Contact</a></li>
-            </ul>
-          </div>
-          <div class="col-md-3 mb-md-0 mb-4 border-left">
-            <h2 class="footer-heading">Social</h2>
-            <ul class="list-unstyled">
-            <li><a href="https://web.facebook.com/Weightloss.healthmotivation" class="py-1 d-block">Facebook</a></li>
-            <li><a href="#" class="py-1 d-block">Twitter</a></li>
-            <li><a href="#" class="py-1 d-block">Instagram</a></li>
-            </ul>
-          </div>
-          </div>
-        </div>
-        </div>
-        <div class="row mt-5">
-        <div class="col-md-6 col-lg-8">
-          <p class="copyright">
-          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-          Copyright &copy;
-          <script>
-            document.write(new Date().getFullYear());
-          </script>
-          All rights reserved | This template is made with
-          <i class="fa fa-heart" aria-hidden="true"></i> by
-          <a href="https://colorlib.com" target="_blank">Colorlib.com</a>
-          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-          </p>
-        </div>
-        <div class="col-md-6 col-lg-4 text-md-right">
-          <p class="mb-0 list-unstyled privacy">
-          <a class="mr-md-3" href="#" title="Terms and Condititon">Terms and Conditions</a>
-          <a class="mr-md-3" href="#" title="Privacy Policy">Privacy Policy</a>
-          </p>
-        </div>
-        </div>
-      </div>
-      </footer>
+        </footer>
     <script src="../js/jquery.min.js"></script>
     <script src="../js/jquery-migrate-3.0.1.min.js"></script>
     <script src="../js/popper.min.js"></script>
