--- a/ui/index.html
+++ b/ui/index.html
@@ -41,7 +41,7 @@
               <span class="mailus">Phone no:</span>
               <a href="tel://250782346378">+250 782346378</a> or
               <span class="mailus">email us:</span>
-              <a href="mailto:support@weightlossandhealth.com" title="weight loss and health motivation">support@wlhm.com</a>
+              <a href="mailto:gilbeltelnino@gmail.com" title="weight loss and health motivation email">gilbeltelnino@gmail.com</a>
             </p>
           </div>
           <div class="col d-flex justify-content-end">
