adding privacy terms and disclaimer page

--- a/ui/html/message-sent.html
+++ b/ui/html/message-sent.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-    rel="stylesheet"
-    href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-  />
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="../css/owl.carousel.min.css" />
     <link rel="stylesheet" href="../css/animate.css" />
 
@@ -20,58 +20,72 @@
     <link rel="stylesheet" href="../css/flaticon.css" />
     <link rel="stylesheet" href="../css/style.css" />
     <title>Thank you!</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="wrap">
-        <div class="container">
-          <div class="row justify-content-between contact-header">
-            <div class="col d-flex align-items-center">
-              <p class="mb-0 phone">
-                <span class="mailus">Phone no:</span>
-                <a href="tel://250782346378">+250 782346378</a> or
-                <span class="mailus">email us:</span>
-                <a href="mailto:gilbeltelnino@gmail.com" title="weight loss and health motivation email">gilbeltelnino@gmail.com</a>
+      <div class="container">
+        <div class="row justify-content-between contact-header">
+          <div class="col d-flex align-items-center">
+            <p class="mb-0 phone">
+              <span class="mailus">Phone no:</span>
+              <a href="tel://250782346378">+250 782346378</a> or
+              <span class="mailus">email us:</span>
+              <a
+                href="mailto:support@weightlossandhealthmotivation.com"
+                title="weight loss and health motivation email"
+                >here</a
+              >
+            </p>
+          </div>
+          <div class="col d-flex justify-content-end">
+            <div class="social-media">
+              <p class="mb-0 d-flex">
+                <a
+                  href="https://web.facebook.com/Weightloss.healthmotivation"
+                  class="d-flex align-items-center justify-content-center"
+                  title="Facebook"
+                  target="_blank"
+                  ><span class="fa fa-facebook"
+                    ><i class="sr-only">Facebook</i></span
+                  ></a
+                >
+                <a
+                  href="#"
+                  class="d-flex align-items-center justify-content-center"
+                  title="twitter"
+                  ><span class="fa fa-twitter"
+                    ><i class="sr-only">Twitter</i></span
+                  ></a
+                >
+                <a
+                  href="#"
+                  class="d-flex align-items-center justify-content-center"
+                  title="instagram"
+                  ><span class="fa fa-instagram"
+                    ><i class="sr-only">Instagram</i></span
+                  ></a
+                >
               </p>
-            </div>
-            <div class="col d-flex justify-content-end">
-              <div class="social-media">
-                <p class="mb-0 d-flex">
-                  <a
-                    href="https://web.facebook.com/Weightloss.healthmotivation"
-                    class="d-flex align-items-center justify-content-center"
-                    title="Facebook" target="_blank"
-                    ><span class="fa fa-facebook"
-                      ><i class="sr-only">Facebook</i></span
-                    ></a
-                  >
-                  <a
-                    href="#"
-                    class="d-flex align-items-center justify-content-center" title="twitter"
-                    ><span class="fa fa-twitter"
-                      ><i class="sr-only">Twitter</i></span
-                    ></a
-                  >
-                  <a
-                    href="#"
-                    class="d-flex align-items-center justify-content-center" title="instagram"
-                    ><span class="fa fa-instagram"
-                      ><i class="sr-only">Instagram</i></span
-                    ></a
-                  >
-                </p>
-              </div>
             </div>
           </div>
         </div>
       </div>
-      <nav
-        class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light"
-        id="ftco-navbar"
-      >
-        <div class="container">
-          <div class="mobile-nav container">
-            <a class="navbar-brand"title="weight loss and health motivation" href="index.html"
-            ><span><img src="../images/my-logo1.png" alt="logo" class="img-logo"></span
+    </div>
+    <nav
+      class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light"
+      id="ftco-navbar"
+    >
+      <div class="container">
+        <div class="mobile-nav container">
+          <a
+            class="navbar-brand"
+            title="weight loss and health motivation"
+            href="index.html"
+            ><span
+              ><img
+                src="../images/my-logo1.png"
+                alt="logo"
+                class="img-logo" /></span
           ></a>
           <button
             class="navbar-toggler"
@@ -82,130 +96,184 @@
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
-            <span class="fa fa-bars" style="font-size: 2rem"></span>
+            <span class="fa fa-bars" style="font-size: 2rem;"></span>
           </button>
-          </div>
-          <div class="collapse navbar-collapse" id="ftco-nav">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item active">
-                <a href="../index.html" class="nav-link">Home</a>
-              </li>
-              <li class="nav-item">
-                <a href="about.html" class="nav-link">About</a>
-              </li>
-              <li class="nav-item">
-                <a href="blog.html" class="nav-link">Blog</a>
-              </li>
-              <li class="nav-item">
-                <a href="contact.html" class="nav-link">Contact</a>
-              </li>
-            </ul>
-          </div>
         </div>
-      </nav>
-    <p style="text-align: center;color: green;font-size: 1rem; padding: 3rem 0;text-transform: capitalize;">Message sent successfully!</p>
+        <div class="collapse navbar-collapse" id="ftco-nav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a href="../index.html" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="about.html" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+              <a href="blog.html" class="nav-link">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a href="contact.html" class="nav-link">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <p
+      style="
+        text-align: center;
+        color: green;
+        font-size: 1rem;
+        padding: 3rem 0;
+        text-transform: capitalize;
+      "
+    >
+      Message sent successfully!
+    </p>
     <div style="text-align: center;">
-      <a href="blog.html" style="padding: 0.5rem; text-transform: uppercase;" class="btn-primary">Read Blog</a>
+      <a
+        href="blog.html"
+        style="padding: 0.5rem; text-transform: uppercase;"
+        class="btn-primary"
+        >Read Blog</a
+      >
     </div>
     <footer class="footer">
-        <div class="container">
-          <div class="row">
+      <div class="container">
+        <div class="row">
           <div class="col-md-12">
             <div class="bg-secondary w-100 rounded p-4">
-            <div class="row">
-              <div class="col-md-7 d-flex align-items-center">
-              <h2
-                class="mb-3 mb-sm-0"
-                style="color:black; font-size: 18px;"
-              >
-                Subcribe for our weekly tips
-              </h2>
-              </div>
-              <div class="col-md-5 d-flex align-items-center">
-              <form action="subscribe-success.html" class="subscribe-form" name="subscribeForm" method="POST" data-netlify="true">
-                <div class="form-group d-flex">
-                <input
-                  type="email"
-                  class="form-control"
-                  placeholder="Enter email address" required name="email"
-                />
-                <input
-                  type="submit"
-                  value="Subscribe"
-                  class="submit px-3"
-                />
+              <div class="row">
+                <div class="col-md-7 d-flex align-items-center">
+                  <h2
+                    class="mb-3 mb-sm-0"
+                    style="color: black; font-size: 18px;"
+                  >
+                    Subcribe for our weekly tips
+                  </h2>
                 </div>
-              </form>
+                <div class="col-md-5 d-flex align-items-center">
+                  <form
+                    action="subscribe-success.html"
+                    class="subscribe-form"
+                    name="subscribeForm"
+                    method="POST"
+                    data-netlify="true"
+                  >
+                    <div class="form-group d-flex">
+                      <input
+                        type="email"
+                        class="form-control"
+                        placeholder="Enter email address"
+                        required
+                        name="email"
+                      />
+                      <input
+                        type="submit"
+                        value="Subscribe"
+                        class="submit px-3"
+                      />
+                    </div>
+                  </form>
+                </div>
               </div>
             </div>
-            </div>
           </div>
-          </div>
-          <div class="row">
+        </div>
+        <div class="row">
           <div class="col-md-4 col-lg-5">
             <div class="row">
-            <div class="col-md-12 col-lg-8 mb-md-0 mb-4">
-              <h2 class="footer-heading">
-              <a href="../index.html"><img src="../images/my-logo1.png" alt="logo" class="img-logo"></a>
-              </h2>
-              <p>He who has health has hope; and he who has hope has everything. </p>
-             
-            </div>
+              <div class="col-md-12 col-lg-8 mb-md-0 mb-4">
+                <h2 class="footer-heading">
+                  <a href="../index.html"
+                    ><img
+                      src="../images/my-logo1.png"
+                      alt="logo"
+                      class="img-logo"
+                  /></a>
+                </h2>
+                <p>
+                  He who has health has hope; and he who has hope has
+                  everything.
+                </p>
+              </div>
             </div>
           </div>
           <div class="col-md-8 col-lg-7">
             <div class="row">
-            <div class="col-md-3 mb-md-0 mb-4 border-left">
-              <h2 class="footer-heading">Services</h2>
-              <ul class="list-unstyled">
-              <li><a href="#" class="py-1 d-block">Meal Plan</a></li>
-              <li>
-                <a href="#" class="py-1 d-block">Workout Strategy</a>
-              </li>
-              <li><a href="#" class="py-1 d-block">inspirations</a></li>
-              </ul>
-            </div>
-            <div class="col-md-3 mb-md-0 mb-4 border-left">
-              <h2 class="footer-heading">About</h2>
-              <ul class="list-unstyled">
-              <li><a href="blog.html" class="py-1 d-block">Blog</a></li>
-              <li><a href="contact.html" class="py-1 d-block">Contact</a></li>
-              </ul>
-            </div>
-            <div class="col-md-3 mb-md-0 mb-4 border-left">
-              <h2 class="footer-heading">Social</h2>
-              <ul class="list-unstyled">
-              <li><a href="https://web.facebook.com/Weightloss.healthmotivation" class="py-1 d-block">Facebook</a></li>
-              <li><a href="#" class="py-1 d-block">Twitter</a></li>
-              <li><a href="#" class="py-1 d-block">Instagram</a></li>
-              </ul>
-            </div>
+              <div class="col-md-3 mb-md-0 mb-4 border-left">
+                <h2 class="footer-heading">Services</h2>
+                <ul class="list-unstyled">
+                  <li><a href="#" class="py-1 d-block">Meal Plan</a></li>
+                  <li>
+                    <a href="#" class="py-1 d-block">Workout Strategy</a>
+                  </li>
+                  <li><a href="#" class="py-1 d-block">inspirations</a></li>
+                </ul>
+              </div>
+              <div class="col-md-3 mb-md-0 mb-4 border-left">
+                <h2 class="footer-heading">About</h2>
+                <ul class="list-unstyled">
+                  <li><a href="blog.html" class="py-1 d-block">Blog</a></li>
+                  <li>
+                    <a href="contact.html" class="py-1 d-block">Contact</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="col-md-3 mb-md-0 mb-4 border-left">
+                <h2 class="footer-heading">Social</h2>
+                <ul class="list-unstyled">
+                  <li>
+                    <a
+                      href="https://web.facebook.com/Weightloss.healthmotivation"
+                      class="py-1 d-block"
+                      >Facebook</a
+                    >
+                  </li>
+                  <li><a href="#" class="py-1 d-block">Twitter</a></li>
+                  <li><a href="#" class="py-1 d-block">Instagram</a></li>
+                </ul>
+              </div>
             </div>
           </div>
-          </div>
-          <div class="row mt-5">
+        </div>
+        <div class="row mt-5">
           <div class="col-md-6 col-lg-8">
             <p class="copyright">
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            Copyright &copy;
-            <script>
-              document.write(new Date().getFullYear());
-            </script>
-            All rights reserved | This template is made with
-            <i class="fa fa-heart" aria-hidden="true"></i> by
-            <a href="https://colorlib.com" target="_blank">Colorlib.com</a>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+              Copyright &copy;
+              <script>
+                document.write(new Date().getFullYear());
+              </script>
+              All rights reserved | This template is made with
+              <i class="fa fa-heart" aria-hidden="true"></i> by
+              <a href="https://colorlib.com" target="_blank">Colorlib.com</a>
+              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             </p>
           </div>
           <div class="col-md-6 col-lg-4 text-md-right">
             <p class="mb-0 list-unstyled privacy">
-            <a class="mr-md-3" href="#" title="Terms and Condititon">Terms and Conditions</a>
-            <a class="mr-md-3" href="#" title="Privacy Policy">Privacy Policy</a>
+              <a
+                class="mr-md-3"
+                href="terms-and-condition.html"
+                title="Terms and Condititon"
+                >Terms</a
+              >
+              <a
+                class="mr-md-3"
+                href="privacy-policy.html"
+                title="Privacy Policy"
+                >Privacy</a
+              >
+              <a
+                class="mr-md-3"
+                href="disclaimer.html"
+                title="disclaimer"
+                >Disclaimer</a
+              >
             </p>
           </div>
-          </div>
         </div>
-        </footer>
+      </div>
+    </footer>
     <script src="../js/jquery.min.js"></script>
     <script src="../js/jquery-migrate-3.0.1.min.js"></script>
     <script src="../js/popper.min.js"></script>
@@ -220,5 +288,5 @@
     <script src="../js/jquery.magnific-popup.min.js"></script>
     <script src="../js/scrollax.min.js"></script>
     <script src="../js/main.js"></script>
-</body>
+  </body>
 </html>
