--- a/ui/index.html
+++ b/ui/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Home - weight loss and health motivation</title>
+    <title>Discover happy life weight loss and health motivation tips</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -41,7 +41,7 @@
               <span class="mailus">Phone no:</span>
               <a href="tel://250782346378">+250 782346378</a> or
               <span class="mailus">email us:</span>
-              <a href="mailto:gilbeltelnino@gmail.com" title="weight loss and health motivation email">gilbeltelnino@gmail.com</a>
+              <a href="mailto:support@weightlossandhealthmotivation.com" title="weight loss and health motivation email">here</a>
             </p>
           </div>
           <div class="col d-flex justify-content-end">
@@ -82,7 +82,7 @@
       <div class="container">
         <div class="mobile-nav container">
           <a class="navbar-brand"title="weight loss and health motivation" href="index.html"
-          ><span><img src="./images/my-logo1.png" alt="logo" class="img-logo"></span
+          ><span><img src="./images/my-logo1.png" alt="weight loss and health motivation logo" class="img-logo"></span
         ></a>
         <button
           class="navbar-toggler"
@@ -931,8 +931,9 @@
           </div>
           <div class="col-md-6 col-lg-4 text-md-right">
             <p class="mb-0 list-unstyled privacy">
-              <a class="mr-md-3" href="#" title="Terms and Condititon">Terms and Conditions</a>
-              <a class="mr-md-3" href="#" title="Privacy Policy">Privacy Policy</a>
+              <a class="mr-md-3" href="./html/terms-and-condition.html" title="Terms and Condititon">Terms</a>
+              <a class="mr-md-3" href="./html/privacy-policy.html" title="Privacy Policy">Privacy</a>
+              <a class="mr-md-3" href="./html/disclaimer.html" title="Disclaimer">Disclaimer</a>
             </p>
           </div>
         </div>
