--- a/ui/html/contact.html
+++ b/ui/html/contact.html
@@ -28,7 +28,7 @@
 			<div class="container">
 				<div class="row justify-content-between contact-header">
 						<div class="col d-flex align-items-center">
-							<p class="mb-0 phone"><span class="mailus">Phone no:</span> <a href="tel://250782346378">+250 782346378</a> or <span class="mailus">email us:</span> <a href="mailto:gilbeltelnino@gmail.com" title="weight loss and health motivation email">gilbeltelnino@gmail.com</a></p>
+							<p class="mb-0 phone"><span class="mailus">Phone no:</span> <a href="tel://250782346378">+250 782346378</a> or <span class="mailus">email us:</span> <a href="mailto:support@weightlossandhealthmotivation.com" title="weight loss and health motivation email">here</a></p>
 						</div>
 						<div class="col d-flex justify-content-end">
 							<div class="social-media">
@@ -156,7 +156,7 @@
 					        			<span class="fa fa-paper-plane"></span>
 					        		</div>
 					        		<div class="text pl-3">
-						            <p><span>Email:</span> <a href="mailto:gilbeltelnino@wlhm.com">gilbeltelnino@gmail.com</a></p>
+						            <p><span>Email:</span> <a href="mailto:support@weightlossandhealthmotivation.com">support@weightlossandhealthmotivation.com</a></p>
 						          </div>
 								</div>
 				          </div>
@@ -261,8 +261,14 @@
 			</div>
 			<div class="col-md-6 col-lg-4 text-md-right">
 			  <p class="mb-0 list-unstyled privacy">
-				<a class="mr-md-3" href="#" title="Terms and Condititon">Terms and Conditions</a>
-				<a class="mr-md-3" href="#" title="Privacy Policy">Privacy Policy</a>
+				<a class="mr-md-3" href="terms-and-condition.html" title="Terms and Condititon">Terms</a>
+				<a class="mr-md-3" href="privacy-policy.html" title="Privacy Policy">Privacy</a>
+				<a
+                class="mr-md-3"
+                href="disclaimer.html"
+                title="disclaimer"
+                >Disclaimer</a
+              >
 			  </p>
 			</div>
 		  </div>
