--- a/ui/html/disclaimer.html
+++ b/ui/html/disclaimer.html
@@ -7,7 +7,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="../css/owl.carousel.min.css" />
+
     <link rel="stylesheet" href="../css/animate.css" />
 
     <link rel="stylesheet" href="../css/owl.carousel.min.css" />
@@ -19,7 +19,7 @@
 
     <link rel="stylesheet" href="../css/flaticon.css" />
     <link rel="stylesheet" href="../css/style.css" />
-    <title>Thank you!</title>
+    <title>Terms and Condition | weight loss and health motivation</title>
   </head>
   <body>
     <div class="wrap">
@@ -42,11 +42,10 @@
               <p class="mb-0 d-flex">
                 <a
                   href="https://web.facebook.com/Weightloss.healthmotivation"
-                  class="d-flex align-items-center justify-content-center"
-                  title="Facebook"
                   target="_blank"
+                  class="d-flex align-items-center justify-content-center"
                   ><span class="fa fa-facebook"
-                    ><i class="sr-only">Facebook</i></span
+                    ><i class="sr-only" title="facebook">Facebook</i></span
                   ></a
                 >
                 <a
@@ -81,12 +80,8 @@
             class="navbar-brand"
             title="weight loss and health motivation"
             href="index.html"
-            ><span
-              ><img
-                src="../images/my-logo1.png"
-                alt="logo"
-                class="img-logo" /></span
-          ></a>
+            ><img src="../images/my-logo1.png" alt="logo" class="img-logo"
+          /></a>
           <button
             class="navbar-toggler"
             type="button"
@@ -101,40 +96,153 @@
         </div>
         <div class="collapse navbar-collapse" id="ftco-nav">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a href="../index.html" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
-              <a href="about.html" class="nav-link">About</a>
+              <a href="./about.html" class="nav-link">About</a>
             </li>
             <li class="nav-item">
-              <a href="blog.html" class="nav-link">Blog</a>
+              <a href="./blog.html" class="nav-link">Blog</a>
             </li>
-            <li class="nav-item">
-              <a href="contact.html" class="nav-link">Contact</a>
+            <li class="nav-item active">
+              <a href="./contact.html" class="nav-link">Contact</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-    <p
-      style="
-        text-align: center;
-        color: green;
-        font-size: 1rem;
-        padding: 3rem 0;
-        text-transform: capitalize;
-      "
-    >
-      Thank you for subscribe to our weekly tips!
-    </p>
-    <div style="text-align: center;">
-      <a
-        href="blog.html"
-        style="padding: 0.5rem; text-transform: uppercase;"
-        class="btn-primary"
-        >Read Blog</a
-      >
+
+    <div class="container privacy-terms">
+      <h2 style="text-align: center;"><b>DISCLAIMER</b></h2>
+      <p>Last updated: 2020-04-14</p>
+      <p><b>WEBSITE DISCLAIMER</b></p>
+      <p>
+        The information provided by
+        <b>weight loss and health motivation</b> (“Company”, “we”, “our”, “us”)
+        on <b>https://www.weightlossandhealthmotivation.com/</b> (the “Site”) is
+        for general informational purposes only. All information on the Site is
+        provided in good faith, however we make no representation or warranty of
+        any kind, express or implied, regarding the accuracy, adequacy,
+        validity, reliability, availability, or completeness of any information
+        on the Site.
+      </p>
+      <p>
+        UNDER NO CIRCUMSTANCE SHALL WE HAVE ANY LIABILITY TO YOU FOR ANY LOSS OR
+        DAMAGE OF ANY KIND INCURRED AS A RESULT OF THE USE OF THE SITE OR
+        RELIANCE ON ANY INFORMATION PROVIDED ON THE SITE. YOUR USE OF THE SITE
+        AND YOUR RELIANCE ON ANY INFORMATION ON THE SITE IS SOLELY AT YOUR OWN
+        RISK.
+      </p>
+      <p><b>EXTERNAL LINKS DISCLAIMER</b></p>
+      <p>
+        The Site may contain (or you may be sent through the Site) links to
+        other websites or content belonging to or originating from third parties
+        or links to websites and features. Such external links are not
+        investigated, monitored, or checked for accuracy, adequacy, validity,
+        reliability, availability or completeness by us.
+      </p>
+      <p>
+        For example, the outlined Disclaimer has been created using
+        <a href="https://policymaker.io/">PolicyMaker.io</a>, a free web
+        application for generating high-quality legal documents. PolicyMaker’s
+        free website
+        <a href="https://policymaker.io/disclaimer/">Disclaimer</a> generator is
+        an easy-to-use tool for creating an excellent Disclaimer template for a
+        website, blog, eCommerce store or app.
+      </p>
+      <p>
+        WE DO NOT WARRANT, ENDORSE, GUARANTEE, OR ASSUME RESPONSIBILITY FOR THE
+        ACCURACY OR RELIABILITY OF ANY INFORMATION OFFERED BY THIRD-PARTY
+        WEBSITES LINKED THROUGH THE SITE OR ANY WEBSITE OR FEATURE LINKED IN ANY
+        BANNER OR OTHER ADVERTISING. WE WILL NOT BE A PARTY TO OR IN ANY WAY BE
+        RESPONSIBLE FOR MONITORING ANY TRANSACTION BETWEEN YOU AND THIRD-PARTY
+        PROVIDERS OF PRODUCTS OR SERVICES.
+      </p>
+      <p><b>PROFESSIONAL DISCLAIMER</b></p>
+      <p>
+        The Site can not and does not contain medical advice. The information is
+        provided for general informational and educational purposes only and is
+        not a substitute for professional medical advice. Accordingly, before
+        taking any actions based upon such information, we encourage you to
+        consult with the appropriate professionals. We do not provide any kind
+        of medical advice.
+      </p>
+      <p>
+        Content published on https://www.weightlossandhealthmotivation.com/ is
+        intended to be used and must be used for informational purposes only. It
+        is very important to do your own analysis before making any decision
+        based on your own personal circumstances. You should take independent
+        medical advice from a professional or independently research and verify
+        any information that you find on our Website and wish to rely upon.
+      </p>
+      <p>
+        THE USE OR RELIANCE OF ANY INFORMATION CONTAINED ON THIS SITE IS SOLELY
+        AT YOUR OWN RISK.
+      </p>
+      <p><b>AFFILIATES DISCLAIMER</b></p>
+      <p>
+        The Site may contain links to affiliate websites, and we may receive an
+        affiliate commission for any purchases or actions made by you on the
+        affiliate websites using such links.
+      </p>
+      <p><b>TESTIMONIALS DISCLAIMER</b></p>
+      <p>
+        The Site may contain testimonials by users of our products and/or
+        services. These testimonials reflect the real-life experiences and
+        opinions of such users. However, the experiences are personal to those
+        particular users, and may not necessarily be representative of all users
+        of our products and/or services. We do not claim, and you should not
+        assume that all users will have the same experiences.
+      </p>
+      <p>YOUR INDIVIDUAL RESULTS MAY VARY.</p>
+      <p>
+        The testimonials on the Site are submitted in various forms such as
+        text, audio and/or video, and are reviewed by us before being posted.
+        They appear on the Site verbatim as given by the users, except for the
+        correction of grammar or typing errors. Some testimonials may have been
+        shortened for the sake of brevity, where the full testimonial contained
+        extraneous information not relevant to the general public.
+      </p>
+      <p>
+        The views and opinions contained in the testimonials belong solely to
+        the individual user and do not reflect our views and opinions.
+      </p>
+      <p><b>ERRORS AND OMISSIONS DISCLAIMER</b></p>
+      <p>
+        While we have made every attempt to ensure that the information
+        contained in this site has been obtained from reliable sources, weight
+        loss and health motivation is not responsible for any errors or
+        omissions or for the results obtained from the use of this information.
+        All information in this site is provided “as is”, with no guarantee of
+        completeness, accuracy, timeliness or of the results obtained from the
+        use of this information, and without warranty of any kind, express or
+        implied, including, but not limited to warranties of performance,
+        merchantability, and fitness for a particular purpose.
+      </p>
+      <p>
+        In no event will weight loss and health motivation, its related
+        partnerships or corporations, or the partners, agents or employees
+        thereof be liable to you or anyone else for any decision made or action
+        taken in reliance on the information in this Site or for any
+        consequential, special or similar damages, even if advised of the
+        possibility of such damages.
+      </p>
+
+      <p><b>LOGOS AND TRADEMARKS DISCLAIMER</b></p>
+      <p>
+        All logos and trademarks of third parties referenced on
+        https://www.weightlossandhealthmotivation.com/ are the trademarks and
+        logos of their respective owners. Any inclusion of such trademarks or
+        logos does not imply or constitute any approval, endorsement or
+        sponsorship of weight loss and health motivation by such owners.
+      </p>
+      <p><b>CONTACT US</b></p>
+      <p>
+        Should you have any feedback, comments, requests for technical support
+        or other inquiries, please contact us by email:
+        <b>support@weightlossandhealthmotivation.com</b>.
+      </p>
     </div>
     <footer class="footer">
       <div class="container">
@@ -152,11 +260,11 @@
                 </div>
                 <div class="col-md-5 d-flex align-items-center">
                   <form
-                    action="subscribe-success.html"
                     class="subscribe-form"
-                    name="subscribeForm"
                     method="POST"
                     data-netlify="true"
+                    action="subscribe-success.html"
+                    name="subscribeForm"
                   >
                     <div class="form-group d-flex">
                       <input
@@ -184,11 +292,12 @@
               <div class="col-md-12 col-lg-8 mb-md-0 mb-4">
                 <h2 class="footer-heading">
                   <a href="../index.html"
-                    ><img
-                      src="../images/my-logo1.png"
-                      alt="logo"
-                      class="img-logo"
-                  /></a>
+                    ><span
+                      ><img
+                        src="../images/my-logo1.png"
+                        alt="logo"
+                        class="img-logo" /></span
+                  ></a>
                 </h2>
                 <p>
                   He who has health has hope; and he who has hope has
@@ -263,10 +372,7 @@
                 title="Privacy Policy"
                 >Privacy</a
               >
-              <a
-                class="mr-md-3"
-                href="disclaimer.html"
-                title="disclaimer"
+              <a class="mr-md-3" href="disclaimer.html" title="disclaimer"
                 >Disclaimer</a
               >
             </p>
@@ -274,6 +380,30 @@
         </div>
       </div>
     </footer>
+    <div id="ftco-loader" class="show fullscreen">
+      <svg class="circular" width="48px" height="48px">
+        <circle
+          class="path-bg"
+          cx="24"
+          cy="24"
+          r="22"
+          fill="none"
+          stroke-width="4"
+          stroke="#eeeeee"
+        />
+        <circle
+          class="path"
+          cx="24"
+          cy="24"
+          r="22"
+          fill="none"
+          stroke-width="4"
+          stroke-miterlimit="10"
+          stroke="#F96D00"
+        />
+      </svg>
+    </div>
+
     <script src="../js/jquery.min.js"></script>
     <script src="../js/jquery-migrate-3.0.1.min.js"></script>
     <script src="../js/popper.min.js"></script>
