--- a/ui/html/blog.html
+++ b/ui/html/blog.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" href="../css/bootstrap-datepicker.css" />
     <link rel="stylesheet" href="../css/jquery.timepicker.css" />
 
-    <link rel="stylesheet" href="../css/flaticon.css" />
+    <link rel="preload" href="../css/flaticon.css" as="style"/>
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
