minify animate.css file

--- a/ui/html/about.html
+++ b/ui/html/about.html
@@ -23,7 +23,8 @@
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
 
-    <link rel="stylesheet" href="../css/animate.css" />
+    <link rel="preload" href="../css/animate.css" as="style" onload="this.onload=null;this.rel='stylesheet'"/>
+    <noscript><link rel="stylesheet" href="../css/animate.css"></noscript>
 
     <link rel="stylesheet" href="../css/owl.carousel.min.css" />
     <link rel="stylesheet" href="../css/owl.theme.default.min.css" />
